Add sold watermark

--- a/source/styles/style.css
+++ b/source/styles/style.css
@@ -1075,3 +1075,27 @@ td.important {
 .swal2-content img {
     max-width: 100%;
 }
+
+#watermark {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.7;
+    background-color: rgba(0, 0, 0, 0.65);
+    pointer-events: none;
+    z-index:9999;
+}
+
+#watermark span {
+    z-index: 500;
+    color: white;
+    display: block;
+    position: absolute;
+    top: 50%;
+    font-size: 6.5rem;
+    font-size: min(25vh, 20vw);
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(-45deg);
+}
